[gd_scene load_steps=2 format=3 uid="uid://bmns8k22lr4o4"]

[ext_resource type="Script" uid="uid://cptxa80o1skyw" path="res://scenes/ui/devtool/devtool.gd" id="1_j5iw2"]

[node name="Devtool" type="CanvasLayer" node_paths=PackedStringArray("root")]
script = ExtResource("1_j5iw2")
root = NodePath("Root")

[node name="Root" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Root/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Root/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Root/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Dev Tools"

[node name="Exit" type="Button" parent="Root/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="Root/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DebugButton1" type="Button" parent="Root/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Spawn Enemy"

[node name="DebugButton2" type="Button" parent="Root/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Dump Player Stats"

[node name="DebugButton3" type="Button" parent="Root/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Test damage"

[node name="DebugButton4" type="Button" parent="Root/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Drop Test"

[node name="DebugButton5" type="Button" parent="Root/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Test skill Cleave with added Fire support"

[connection signal="pressed" from="Root/MarginContainer/VBoxContainer/HBoxContainer2/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Root/MarginContainer/VBoxContainer/HBoxContainer/DebugButton1" to="." method="_on_debug_button_1_pressed"]
[connection signal="pressed" from="Root/MarginContainer/VBoxContainer/HBoxContainer/DebugButton2" to="." method="_on_debug_button_2_pressed"]
[connection signal="pressed" from="Root/MarginContainer/VBoxContainer/HBoxContainer/DebugButton3" to="." method="_on_debug_button_3_pressed"]
[connection signal="pressed" from="Root/MarginContainer/VBoxContainer/HBoxContainer/DebugButton4" to="." method="_on_debug_button_4_pressed"]
[connection signal="pressed" from="Root/MarginContainer/VBoxContainer/HBoxContainer/DebugButton5" to="." method="_on_debug_button_5_pressed"]
